--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Built application files
-*.apk
-*.ap_
+*/*.apk
+*/*.ap_
 
 # Files for the ART/Dalvik VM
 *.dex
@@ -14,8 +14,8 @@ gen/
 out/
 
 # Gradle files
-.gradle/
-build/
+*/.gradle/
+build/*/
 
 # Local configuration file (sdk path, etc)
 local.properties
