--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 *.class
 
 # Generated files
-bin/
-gen/
-out/
+**/bin/
+**/gen/
+**/out/
 
 # Gradle files
 */.gradle/
@@ -24,7 +24,7 @@ local.properties
 proguard/
 
 # Log Files
-*.log
+**/*.log
 
 # Android Studio Navigation editor temp files
 .navigation/
