--- a/Location1/app/build.gradle
+++ b/Location1/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "net.glm.gsontraning1"
+        applicationId "net.glm.location1"
         minSdkVersion 21
         targetSdkVersion 26
         versionCode 1
@@ -22,10 +22,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.google.code.gson:gson:2.8.2'
-
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    implementation'com.google.android.gms:play-services-location:11.8.0'
 }
