--- a/ActivityRecognition/app/src/main/AndroidManifest.xml
+++ b/ActivityRecognition/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="net.glm.activityrecognition">
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
